Travic CI fixes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: c
 os: linux
 compiler: gcc
+
+addons:
+  apt:
+    packages:
+      - automake-1.15
+    coverity_scan:
+      project: "oldnomad/picosocks5"
+    build_command: "make"
