--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ dist: trusty
 compiler: gcc
 
 addons:
-  coverity_scan:
-    project: "oldnomad/picosocks5"
-    build_command: "make"
+  apt:
+    coverity_scan:
+      project: "oldnomad/picosocks5"
+      build_command: "make"
