--- a/configure.ac
+++ b/configure.ac
@@ -14,8 +14,9 @@ AC_TYPE_SSIZE_T
 AC_TYPE_UID_T
 AC_TYPE_UINT16_T
 AC_FUNC_FORK
+AC_FUNC_MALLOC
 AC_FUNC_STRERROR_R
-AC_CHECK_FUNCS([dup2 memchr memmove select socket strtoul])
+AC_CHECK_FUNCS([dup2 memchr memmove select socket strchr strrchr strtoul])
 AC_CHECK_LIB(pthread, pthread_create)
 AC_CHECK_LIB(crypt, crypt_r)
 
