Add other draft RFCs

--- a/Makefile.in
+++ b/Makefile.in
@@ -321,7 +321,9 @@ top_srcdir = @top_srcdir@
 SUBDIRS = src
 nobase_dist_doc_DATA = README.md \
     rfc/rfc1928.txt rfc/rfc1929.txt rfc/rfc1961.txt \
-    rfc/draft-ietf-aft-socks-chap-01.txt
+    rfc/draft-ietf-aft-socks-chap-01.txt \
+    rfc/draft-ietf-aft-socks-pro-v5-05.txt \
+    rfc/draft-ietf-aft-socks-ssl-00.txt
 
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
