--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,6 @@
 SUBDIRS = src
 nobase_dist_doc_DATA = README.md \
     rfc/rfc1928.txt rfc/rfc1929.txt rfc/rfc1961.txt \
-    rfc/draft-ietf-aft-socks-chap-01.txt
+    rfc/draft-ietf-aft-socks-chap-01.txt \
+    rfc/draft-ietf-aft-socks-pro-v5-05.txt \
+    rfc/draft-ietf-aft-socks-ssl-00.txt
