--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,5 @@
 AM_CFLAGS = -std=c99 -Wall -Wextra -pedantic -Wshadow -Wpointer-arith -Wcast-qual -Wstrict-prototypes -Wmissing-prototypes
 sbin_PROGRAMS = picosocks5
-picosocks5_SOURCES = main.c socks5.c auth.c logger.c util.c
+picosocks5_SOURCES = main.c socks5.c logger.c util.c \
+    auth.c authuser.c auth-basic.c \
+    authfile.c authfile-password.c
