--- a/configure.ac
+++ b/configure.ac
@@ -5,10 +5,15 @@ AC_CONFIG_FILES([
  Makefile
  src/Makefile
 ])
-AC_PROG_CC
-AC_PROG_INSTALL
 
-AC_CHECK_HEADERS([fcntl.h netdb.h syslog.h unistd.h sys/socket.h])
+AC_PROG_CC
+AC_PROG_CC_C99
+AC_PROG_INSTALL
+if test x"$ac_cv_prog_cc_c99" = x"no"; then
+    AC_MSG_ERROR([compiler must support C99 standard])
+fi
+
+AC_CHECK_HEADERS([fcntl.h netdb.h stddef.h syslog.h unistd.h sys/socket.h])
 AC_TYPE_SIZE_T
 AC_TYPE_SSIZE_T
 AC_TYPE_UID_T
@@ -17,7 +22,8 @@ AC_FUNC_FORK
 AC_FUNC_MALLOC
 AC_FUNC_STRERROR_R
 AC_CHECK_FUNCS([dup2 memchr memmove select socket strcasecmp strchr strrchr strtoul])
-AC_CHECK_LIB(pthread, pthread_create)
-AC_CHECK_LIB(crypt, crypt_r)
+
+AC_SEARCH_LIBS(pthread_create, [pthread])
+AC_SEARCH_LIBS(crypt_r, [crypt])
 
 AC_OUTPUT
