--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,24 @@
+# Backups
+*~
+
+# autoconf/automake
+*.in
 autom4te.cache/
 autoscan.log
+compile
+configure
 configure.scan
 config.h
 config.log
 config.status
+depcomp
+install-sh
+missing
 stamp-h1
 Makefile
 src/Makefile
+
+# Build artifacts
 src/*.o
 src/.deps
 src/picosocks5
-config.h.in~
