Fix Travis-CI build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: c
 os: linux
 dist: trusty
 compiler: gcc
+before_install:
+  - sudo apt-get install -y pkg-config libssl-dev
 script: autoreconf -f -i -Wall && ./configure && make
