--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: c
 os: linux
-dist: trusty
+dist: xenial
 compiler: gcc
-before_install:
-  - sudo apt-get install -y pkg-config libssl-dev
 script: autoreconf -f -i -Wall && ./configure && make
