Move command line processing to a separate file.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,7 @@ AM_CFLAGS = -std=c99 -Wall -Wextra -pedantic -Wshadow -Wunused -Wuninitialized -
 sbin_PROGRAMS = picosocks5
 bin_PROGRAMS = pis5user
 
-picosocks5_SOURCES = main.c socks5.c logger.c util.c \
+picosocks5_SOURCES = main.c cmdline.c logger.c util.c socks5.c \
     auth.c authuser.c auth-basic.c auth-chap.c \
     authfile.c authfile-password.c
 EXTRA_picosocks5_SOURCES = crypto-openssl.c
