--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ src/*.o
 src/.deps
 src/picosocks5
 src/pis5user
+
+# Debian build artefacts
+debian/.debhelper/
+debian/debhelper-build-stamp
+debian/files
+debian/picosocks5.debhelper.log
+debian/picosocks5.substvars
+debian/picosocks5/
