--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: picosocks5
 Section: contrib/net
 Priority: optional
 Maintainer: Alec Kojaev <alec.kojaev@gmail.com>
-Build-Depends: debhelper (>= 9), autotools-dev
+Build-Depends: debhelper (>= 9), autotools-dev, pandoc
 Standards-Version: 3.9.8
 Homepage: https://gitlab.com/oldnomad/picosocks5
 
