--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,15 @@ Source: picosocks5
 Section: contrib/net
 Priority: optional
 Maintainer: Alec Kojaev <alec.kojaev@gmail.com>
-Build-Depends: debhelper (>= 9), autotools-dev, pandoc
+Build-Depends: debhelper (>= 9), autotools-dev, pandoc, gnutls-dev, libssl-dev
 Standards-Version: 3.9.8
 Homepage: https://gitlab.com/oldnomad/picosocks5
 
-Package: picosocks5
+Package: picosocks5-utils
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Pre-Depends: ${misc:Pre-Depends}
+Suggests: picosocks5
 Description: lightweight and simple SOCKS5 proxy
  PicoSOCKS5 is a lightweight and simple SOCKS5 proxy.
  It supports only SOCKS5 (RFC 1928), with basic (username/password,
@@ -17,3 +19,59 @@ Description: lightweight and simple SOCKS5 proxy
  .
  PicoSOCKS5 is recommended for simple setups without complex
  permissions or high traffic volume.
+ .
+ This package contains auxiliary PicoSOCKS5 utilities.
+
+Package: picosocks5-minimal
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Pre-Depends: ${misc:Pre-Depends}
+Provides: picosocks5
+Conflicts: picosocks5
+Recommends: picosocks5-urils
+Description: lightweight and simple SOCKS5 proxy
+ PicoSOCKS5 is a lightweight and simple SOCKS5 proxy.
+ It supports only SOCKS5 (RFC 1928), with basic (username/password,
+ RFC 1929) or CHAP (draft-ietf-aft-socks-chap-01) authentication,
+ and has no complex limits or ACLs.
+ .
+ PicoSOCKS5 is recommended for simple setups without complex
+ permissions or high traffic volume.
+ .
+ This package contains version of PicoSOCKS5 built without CHAP support.
+
+Package: picosocks5-gnutls
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Pre-Depends: ${misc:Pre-Depends}
+Provides: picosocks5
+Conflicts: picosocks5
+Recommends: picosocks5-urils
+Description: lightweight and simple SOCKS5 proxy
+ PicoSOCKS5 is a lightweight and simple SOCKS5 proxy.
+ It supports only SOCKS5 (RFC 1928), with basic (username/password,
+ RFC 1929) or CHAP (draft-ietf-aft-socks-chap-01) authentication,
+ and has no complex limits or ACLs.
+ .
+ PicoSOCKS5 is recommended for simple setups without complex
+ permissions or high traffic volume.
+ .
+ This package contains version of PicoSOCKS5 built with GnuTLS.
+
+Package: picosocks5-openssl
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Pre-Depends: ${misc:Pre-Depends}
+Provides: picosocks5
+Conflicts: picosocks5
+Recommends: picosocks5-urils
+Description: lightweight and simple SOCKS5 proxy
+ PicoSOCKS5 is a lightweight and simple SOCKS5 proxy.
+ It supports only SOCKS5 (RFC 1928), with basic (username/password,
+ RFC 1929) or CHAP (draft-ietf-aft-socks-chap-01) authentication,
+ and has no complex limits or ACLs.
+ .
+ PicoSOCKS5 is recommended for simple setups without complex
+ permissions or high traffic volume.
+ .
+ This package contains version of PicoSOCKS5 built with OpenSSL.
