--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,2 @@
 SUBDIRS = src
-nobase_dist_doc_DATA = README.md \
-    rfc/rfc1928.txt rfc/rfc1929.txt rfc/rfc1961.txt \
-    rfc/draft-ietf-aft-socks-chap-01.txt \
-    rfc/draft-ietf-aft-socks-ssl-00.txt
+nobase_dist_doc_DATA = README.md
