--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,8 +15,10 @@ EXTRA_pis5user_SOURCES = crypto-gnutls.c crypto-openssl.c
 pis5user_LDADD = $(CRYPTO_MODULE)
 pis5user_DEPENDENCIES = $(CRYPTO_MODULE)
 
+if HAVE_PANDOC
 man1_MANS = pis5user.man
 man8_MANS = picosocks5.man
+endif
 SUFFIXES =  .man .md
 CLEANFILES = *.man
 
