--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,9 @@ AS_IF([test "x${PANDOC}" = xyes],
       [AC_MSG_WARN([pandoc not found, man pages will not be built])])
 AM_CONDITIONAL([HAVE_PANDOC], [test "x${PANDOC}" = xyes])
 
-AC_CHECK_HEADERS([fcntl.h netdb.h stddef.h syslog.h termios.h unistd.h sys/socket.h])
+AC_CHECK_HEADERS([fcntl.h netdb.h stddef.h syslog.h termios.h unistd.h sys/socket.h],
+                 [], [AC_MSG_ERROR([missing required header])])
+AC_CHECK_HEADERS([ifaddrs.h])
 AC_TYPE_SIZE_T
 AC_TYPE_SSIZE_T
 AC_TYPE_UID_T
@@ -32,10 +34,16 @@ AC_TYPE_UINT32_T
 AC_FUNC_FORK
 AC_FUNC_MALLOC
 AC_FUNC_STRERROR_R
-AC_CHECK_FUNCS([dup2 memchr memmove memset select socket strcasecmp strchr strrchr strdup strtoul])
+AC_CHECK_FUNCS([dup2 memchr memmove memset select socket strcasecmp strchr strrchr strdup strtoul],
+               [], [AC_MSG_ERROR([missing required function])])
+AC_CHECK_FUNCS([getifaddrs])
+AS_IF([test "x$ac_cv_func_getifaddrs" = xyes],
+      [AC_DEFINE([HAVE_IFADDRS_SUPPORT], [1], [Support interface names in bind options])])
 
-AC_SEARCH_LIBS(pthread_create, [pthread])
-AC_SEARCH_LIBS(crypt_r, [crypt])
+AC_SEARCH_LIBS(pthread_create, [pthread],
+               [], [AC_MSG_ERROR([missing pthread implementation])])
+AC_SEARCH_LIBS(crypt_r, [crypt],
+               [], [AC_MSG_ERROR([missing crypt_r implementation])])
 
 CRYPTO_LIBS=
 CRYPTO_MODULE=
