--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
   - release
 
 .build-common:
-  before_script: &build_common_script
+  before_script:
     - apt-get update -qq
     - apt-get install -y -qq build-essential autoconf automake debhelper pandoc git pkg-config gnutls-dev libssl-dev
     - autoconf --version
@@ -16,7 +16,7 @@ stages:
 
 test-build:
   stage: build
-  before_script: *build_common_script
+  extends: build-common
   script:
     - autoreconf -f -i -Wall
     - ./configure --with-crypto=gnutls
@@ -30,7 +30,7 @@ test-build:
 
 debian-packages:
   stage: release
-  before_script: *build_common_script
+  extends: build-common
   script:
     - autoreconf -f -i -Wall
     - dpkg-buildpackage -us -uc
@@ -39,9 +39,13 @@ debian-packages:
     - mv ../picosocks5*.dsc build/
     - mv ../picosocks5*.changes build/
     - mv ../picosocks5*.buildinfo build/
+    - { echo '# Changes:'; dpkg-parsechangelog -S Changes | tail -n +3; } >./release-notes.md
   only:
     - tags
   artifacts:
     name: "picosocks5-$CI_COMMIT_TAG"
     paths:
       - build/*
+  release:
+    tag_name: $CI_COMMIT_TAG
+    description: ./release-notes.md
