--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: debian:stable-slim
 
 stages:
   - build
+  - package
   - release
 
 .build-common:
@@ -29,7 +30,7 @@ test-build:
     - tags
 
 debian-packages:
-  stage: release
+  stage: package
   extends: .build-common
   script:
     - autoreconf -f -i -Wall
@@ -39,14 +40,22 @@ debian-packages:
     - mv ../picosocks5*.dsc build/
     - mv ../picosocks5*.changes build/
     - mv ../picosocks5*.buildinfo build/
-    - echo '# Changes:' >./release-notes.md
-    - dpkg-parsechangelog -S Changes | tail -n +3 >>./release-notes.md
+    - echo '# Changes:' >build/release-notes.md
+    - dpkg-parsechangelog -S Changes | tail -n +3 >>build/release-notes.md
   only:
     - tags
   artifacts:
     name: "picosocks5-$CI_COMMIT_TAG"
     paths:
       - build/*
+
+release-job:
+  stage: package
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  script:
+    - echo 'Release job'
+  only:
+    - tags
   release:
     tag_name: $CI_COMMIT_TAG
-    description: ./release-notes.md
+    description: build/release-notes.md
