--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,14 +52,11 @@ debian-packages:
 release-job:
   stage: release
   image: registry.gitlab.com/gitlab-org/release-cli:latest
-  script:
-    - echo 'Release job'
-    - export RELEASE_DESCRIPTION=$(cat build/release-notes.md)
-  only:
-    - tags
   needs:
     - job: debian-packages
       artifacts: true
-  release:
-    tag_name: $CI_COMMIT_TAG
-    description: $RELEASE_DESCRIPTION
+  script:
+    - echo 'Release job'
+    - release-cli create --tag-name "$CI_COMMIT_TAG" --description "$(cat build/release-notes.md)"
+  only:
+    - tags
