Major refactoring of password handling code.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@ bin_PROGRAMS = pis5user
 
 picosocks5_SOURCES = main.c cmdline.c inifile.c logger.c util.c crypto.c \
     socks5.c acl.c \
-    auth.c authuser.c auth-basic.c auth-chap.c \
+    auth.c auth-basic.c auth-chap.c \
     authfile.c authfile-password.c
 
 pis5user_SOURCES = pis5-user.c logger.c util.c crypto.c
